First Draft of Profile Settings

--- a/client/pages/external_profile.html
+++ b/client/pages/external_profile.html
@@ -9,7 +9,7 @@
         <div id="profileHeader">
             <img id="profilePhoto" src="../images/profileImages/profile_photo.jpeg">
             <div id="profileInfo">
-                <h2 id="username">Beat Maker</h1>
+                <h2 id="profileName">Beat Maker</h1>
             </div>
             <br>
             <button id="followBtn">Follow</button>
