First Draft of Upload Work Page

--- a/client/pages/internal_profile.html
+++ b/client/pages/internal_profile.html
@@ -59,7 +59,7 @@
                         
                     </ul>
                 </div>
-                <a id="uploadLink" href="url">Upload work</a>
+                <a id="uploadLink" href="./upload_work.html">Upload Work</a>
             </div>
 
             <div class="box">
