changed href links

--- a/client/pages/explore.html
+++ b/client/pages/explore.html
@@ -11,8 +11,8 @@
 
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="#">Explore</a>
-  <a href="#">Settings</a>
+  <a href="explore.html">Explore</a>
+  <a href="profile_settings">Settings</a>
   <a href="#">About us</a>
   <a href="#">Contact</a>
 </div>
