--- a/client/pages/external_profile.html
+++ b/client/pages/external_profile.html
@@ -12,14 +12,14 @@
                 <h2 id="profileName">Beat Maker</h1>
             </div>
             <br>
-            <button id="followBtn">Follow</button>
+            <button id="followBtn" class="btn">Follow</button>
             <div class="profileStats">
                 <ul>
                     <li>Followers<span class="profileStatsNum">10K</span></li>
                     <li>Following<span class="profileStatsNum">1K</span></li>
                 </ul>
             </div>
-            <button id="reportBtn">Report</button>
+            <button id="reportBtn" class="btn">Report</button>
         </div>
 
         <div id="profileContent">
